# legacyai

./: .env.example  .gitignore  .pre-commit-config.yaml  1  :memory_test:  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai/data/: README.md
ai/models/: README.md
ai/scripts/: placeholder.py
backend/: .dockerignore  Dockerfile  app.py  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  family_interaction_api.py
backend/app/models/: __init__.py
backend/app/services/: __init__.py  memory_capture_service.py  timeline_engine.py
backend/app/services/ai/: __init__.py  conversation_engine.py  identity_model_service.py  knowledge_gap_service.py  life_story_generator.py  memory_distillation_service.py  memory_grounding_service.py  (+4 more)
backend/config/: __init__.py  database_config.py
backend/data/: recipient_profiles.json  sample_memories.json
backend/tests/: test_database_config.py  test_episode_service.py  test_integration_pipeline.py  test_knowledge_gap_service.py  test_legacy_access_service.py  test_life_story_generator.py  test_memory_capture_service.py  test_memory_grounding_service.py  test_memory_priority_service.py  test_person_profile_service.py  test_placeholder.py  test_recipient_context_service.py  test_relationship_service.py  test_response_moderation_service.py  test_timeline_engine.py  test_wisdom_engine.py
backend/tests/utils/: test_logger.py
data/memories/: README.md
data/users/: README.md
docs/: README.md
frontend/: package-lock.json  package.json
frontend/app/chat_interface/: index.html  standalone.js  styles.css
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js
frontend/src/components/: index.js
frontend/src/pages/: index.js
frontend/src/services/: index.js
frontend/tests/: App.test.js
scripts/: README.md  load_memories.py  run_pipeline_tests.py  seed_memories.py
tests/: test_placeholder.py
(+17 files in other folders)
